<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_general_header">

        <ListPreference
            android:entries="@array/history_count_entries"
            android:entryValues="@array/history_count_values"
            android:key="calc_history_count"
            android:persistent="false"
            android:title="@string/settings_key_history_count"
            app:defaultValue="20"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:entries="@array/computation_accuracy_count_entries"
            android:entryValues="@array/computation_accuracy_count_values"
            android:key="calc_computation_accuracy"
            android:persistent="false"
            android:title="@string/settings_key_computation_accuracy"
            app:defaultValue="8"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="calc_record_step"
            app:title="@string/settings_key_record_step" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="calc_auto_scientific_notation"
            app:title="@string/settings_key_auto_scientific_notation" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_others_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="calc_use_vibrator"
            app:title="@string/settings_key_vibrator" />

    </PreferenceCategory>

</PreferenceScreen>
